# dgossgen

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cli/: explain.rs  lint.rs  mod.rs  output.rs
src/config/: mod.rs
src/extractor/: heuristics.rs  mod.rs  model.rs
src/generator/: mod.rs  render.rs
src/interactive/: mod.rs
src/parser/: ast.rs  mod.rs  resolver.rs
src/probe/: mod.rs
tests/: cli_integration.rs  golden_tests.rs
tests/fixtures/: complex_healthcheck.Dockerfile  go_minimal.Dockerfile  nginx.Dockerfile  node_multistage.Dockerfile  php_composer.Dockerfile  python_simple.Dockerfile
