[package]
name = "dgossgen"
version = "0.1.0"
edition = "2021"
description = "Generate dgoss-ready test suites from Dockerfiles"
license = "MIT"
repository = "https://github.com/dortort/dgossgen"
keywords = ["docker", "goss", "dgoss", "testing", "container"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Interactive prompts
dialoguer = "0.11"

# Pretty output
console = "0.15"
indicatif = "0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Regex for heuristic parsing
regex = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Linked hash map for stable ordering
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
insta = { version = "1", features = ["yaml"] }
